# openverse-sdk

./: .gitignore  README.md  env.py  pyproject.toml  requirements.txt
openverse/: __init__.py  make.py  utils.py
openverse/cli/: api.py  auth.py  cli.py  config.py  utils.py
thisisatest-v0/: readme.md
