[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openverse-sdk"
version = "0.1.0"
description = "Openverse SDK and CLI for loading, creating, and managing environments."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "Bobby Cheng" },
    { name = "Kevin Wang" },
    { name = "Yunfei Xie" }
]
dependencies = [
    "textarena>=0.7.3",
    "requests",
    "typer",
    "rich",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
]

[project.urls]
Homepage = "https://github.com/openverse-ai/openverse-sdk"
"Bug Tracker" = "https://github.com/openverse-ai/openverse-sdk/issues"
Documentation = "https://docs.openverse.ai (coming soon)"

[project.scripts]
openverse-cli = "openverse.cli.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["openverse"]
